# mirDIP-adapter

./: .gitignore  README.md  adapter.py  create_knowledge_graph.py  create_mirDIP.py  mirDIP_adapter.py  pyproject.toml
config/: biocypher_config.yaml  schema_config.yaml
